fixed: 비로그인 상황에서 리스트에 있는 상품카드 호버시 장바구니 아이콘 alert창 모달로 수정

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -27,8 +27,12 @@
           <!-- 우측: 제품 정보 -->
           <div class="product-details">
             <!-- 판매자 정보 -->
-            <p class="seller-name" id="sellerName" role="button" tabindex="0">
-            </p>
+            <p
+              class="seller-name"
+              id="sellerName"
+              role="button"
+              tabindex="0"
+            ></p>
 
             <!-- 제품명 -->
             <h1 class="product-name">딥러닝 개발자 무릎 담요</h1>
@@ -106,9 +110,8 @@
           </div>
 
           <!-- 탭 컨텐츠 -->
-         <div class="tabs-content">
+          <div class="tabs-content">
             <div class="tab-panel active" data-tab="detail">
-            
               <div class="detail-content">
                 <p id="detailInfo">제품 상세 설명이 들어갑니다.</p>
               </div>
@@ -144,7 +147,7 @@
       cancel-text="닫기"
       confirm-text="확인"
     ></modal-check>
-    
+
     <!-- 로그인 안내 모달 -->
     <modal-check
       id="loginModal"
@@ -171,8 +174,8 @@
     <modal-check
       id="addToCartSuccessModal"
       message="장바구니에 상품이 담겼습니다.<br>장바구니로 이동하시겠습니까?"
-      cancel-text="계속 쇼핑"
-      confirm-text="장바구니로 이동"
+      cancel-text="쇼핑"
+      confirm-text="장바구니"
     ></modal-check>
     <!-- 장바구니 추가 실패 모달 -->
     <modal-check
