--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
     </section>
     <bottom-footer></bottom-footer>
 
+    <!-- 로그인 안내 모달 -->
+    <modal-check
+      id="loginModal"
+      message="로그인이 필요한 서비스입니다.<br>로그인 하시겠습니까?"
+      cancel-text="아니오"
+      confirm-text="예"
+    ></modal-check>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
