--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
       confirm-text="예"
     ></modal-check>
 
+    <!-- 판매자 계정 안내 모달 -->
+    <modal-check
+      id="sellerModal"
+      message="판매자 계정은 상품을 구매할 수 없습니다."
+      cancel-text="닫기"
+      confirm-text="확인"
+    ></modal-check>
+
+    <!-- 장바구니 추가 성공 모달 -->
+    <modal-check
+      id="addToCartSuccessModal"
+      message="장바구니에 상품이 담겼습니다.<br>장바구니로 이동하시겠습니까?"
+      cancel-text="쇼핑 계속"
+      confirm-text="장바구니"
+    ></modal-check>
+
+    <!-- 장바구니 추가 실패 모달 -->
+    <modal-check
+      id="addToCartErrorModal"
+      message="장바구니 추가에 실패했습니다."
+      cancel-text="닫기"
+      confirm-text="확인"
+    ></modal-check>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
