feat:최적화 계획대로 수행 후 적용

--- a/src/pages/Payment/index.html
+++ b/src/pages/Payment/index.html
@@ -90,8 +90,9 @@
                     inputmode="numeric"
                     pattern="[0-9]*"
                     required
+                    aria-label="주문자 전화번호 앞자리"
                   />
-                  <span class="phone-divider">-</span>
+                  <span class="phone-divider" aria-hidden="true">-</span>
                   <input
                     type="tel"
                     class="phone-input"
@@ -100,8 +101,9 @@
                     inputmode="numeric"
                     pattern="[0-9]*"
                     required
+                    aria-label="주문자 전화번호 중간자리"
                   />
-                  <span class="phone-divider">-</span>
+                  <span class="phone-divider" aria-hidden="true">-</span>
                   <input
                     type="tel"
                     class="phone-input"
@@ -110,6 +112,7 @@
                     inputmode="numeric"
                     pattern="[0-9]*"
                     required
+                    aria-label="주문자 전화번호 끝자리"
                   />
                 </div>
               </div>
@@ -155,8 +158,9 @@
                     inputmode="numeric"
                     pattern="[0-9]*"
                     required
+                    aria-label="수령인 전화번호 앞자리"
                   />
-                  <span class="phone-divider">-</span>
+                  <span class="phone-divider" aria-hidden="true">-</span>
                   <input
                     type="tel"
                     class="phone-input"
@@ -165,8 +169,9 @@
                     inputmode="numeric"
                     pattern="[0-9]*"
                     required
+                    aria-label="수령인 전화번호 중간자리"
                   />
-                  <span class="phone-divider">-</span>
+                  <span class="phone-divider" aria-hidden="true">-</span>
                   <input
                     type="tel"
                     class="phone-input"
@@ -175,6 +180,7 @@
                     inputmode="numeric"
                     pattern="[0-9]*"
                     required
+                    aria-label="수령인 전화번호 끝자리"
                   />
                 </div>
               </div>
