--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -20,7 +20,7 @@
           <!-- 좌측: 이미지 영역 -->
           <div class="product-images">
             <div class="main-image-wrapper">
-              <img id="mainImage" />
+              <img id="mainImage" alt="" width="600" height="600" />
             </div>
           </div>
 
