--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hodu-market</title>
+    <meta name="description" content="호두마켓 - 다양한 상품을 만나보세요" />
+    <meta property="og:title" content="HODU MARKET" />
+    <meta property="og:description" content="호두마켓에서 다양한 상품을 만나보세요" />
+    <link rel="preconnect" href="https://spoqa.github.io" crossorigin />
+    <title>HODU MARKET</title>
   </head>
   <body>
+    <h1 class="sr-only">호두마켓 - 온라인 쇼핑몰</h1>
     <header-search></header-search>
     <!-- 메인 슬라이드 섹션 -->
     <section class="slider-section">
@@ -18,15 +23,15 @@
         <div class="slider-wrapper">
           <!-- 첫 번째 슬라이드 -->
           <div class="slide active">
-            <img src="/src/assets/images/weniv1.png" alt="위니브 슬라이드 1" />
+            <img src="/src/assets/images/weniv1.png" alt="위니브 슬라이드 1" width="1920" height="500" />
           </div>
           <!-- 두 번째 슬라이드 -->
           <div class="slide">
-            <img src="/src/assets/images/weniv2.png" alt="위니브 슬라이드 2" />
+            <img src="/src/assets/images/weniv2.png" alt="위니브 슬라이드 2" width="1920" height="500" />
           </div>
           <!-- 세 번째 슬라이드 -->
           <div class="slide">
-            <img src="/src/assets/images/weniv3.png" alt="위니브 슬라이드 3" />
+            <img src="/src/assets/images/weniv3.png" alt="위니브 슬라이드 3" width="1920" height="500" />
           </div>
         </div>
 
