--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="호두마켓 - 다양한 상품을 만나보세요" />
     <meta property="og:title" content="HODU MARKET" />
-    <meta property="og:description" content="호두마켓에서 다양한 상품을 만나보세요" />
+    <meta
+      property="og:description"
+      content="호두마켓에서 다양한 상품을 만나보세요"
+    />
     <link rel="preconnect" href="https://spoqa.github.io" crossorigin />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <title>HODU MARKET</title>
   </head>
   <body>
@@ -23,15 +28,15 @@
         <div class="slider-wrapper">
           <!-- 첫 번째 슬라이드 -->
           <div class="slide active">
-            <img src="/src/assets/images/weniv1.png" alt="위니브 슬라이드 1" width="1920" height="500" />
+            <img src="/src/assets/images/weniv1.png" alt="위니브 슬라이드 1" />
           </div>
           <!-- 두 번째 슬라이드 -->
           <div class="slide">
-            <img src="/src/assets/images/weniv2.png" alt="위니브 슬라이드 2" width="1920" height="500" />
+            <img src="/src/assets/images/weniv2.png" alt="위니브 슬라이드 2" />
           </div>
           <!-- 세 번째 슬라이드 -->
           <div class="slide">
-            <img src="/src/assets/images/weniv3.png" alt="위니브 슬라이드 3" width="1920" height="500" />
+            <img src="/src/assets/images/weniv3.png" alt="위니브 슬라이드 3" />
           </div>
         </div>
 
