fixed: 파비콘 적용문제 해결

--- a/src/adminpages/makeProduct/index.html
+++ b/src/adminpages/makeProduct/index.html
@@ -12,6 +12,7 @@
       property="og:description"
       content="HODU 판매자 센터에서 새로운 상품을 등록하세요."
     />
+    <link rel="icon" href="/favicon.ico" />
     <title>상품 등록 - HODU 판매자 센터</title>
   </head>
   <body>
