--- a/src/pages/Payment/index.html
+++ b/src/pages/Payment/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="주문/결제 - HODU MARKET" />
     <meta property="og:title" content="주문/결제 | HODU MARKET" />
     <meta property="og:description" content="상품 주문 및 결제를 진행하세요" />
+    <link rel="icon" href="/favicon.ico" />
     <title>주문/결제 | HODU MARKET</title>
   </head>
   <body>
