--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="호두마켓 로그인 - 구매회원, 판매회원 로그인" />
     <meta property="og:title" content="로그인 | HODU MARKET" />
     <meta property="og:description" content="호두마켓에 로그인하세요" />
+    <link rel="icon" href="/favicon.ico" />
     <title>로그인 | HODU MARKET</title>
   </head>
   <body>
