--- a/src/pages/regist/index.html
+++ b/src/pages/regist/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="회원가입 - HODU MARKET" />
     <meta property="og:title" content="회원가입 | HODU MARKET" />
     <meta property="og:description" content="호두마켓에 가입하세요" />
+    <link rel="icon" href="/favicon.ico" />
     <title>회원가입 | HODU MARKET</title>
   </head>
   <body>
