--- a/src/pages/shoppingCartPage/index.html
+++ b/src/pages/shoppingCartPage/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="장바구니 - HODU MARKET" />
     <meta property="og:title" content="장바구니 | HODU MARKET" />
     <meta property="og:description" content="장바구니에 담긴 상품을 확인하세요" />
+    <link rel="icon" href="/favicon.ico" />
     <title>장바구니 | HODU MARKET</title>
   </head>
   <body>
