--- a/src/adminpages/SellerCenter/index.html
+++ b/src/adminpages/SellerCenter/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="HODU 판매자 센터에서 상품을 관리하고 판매 현황을 확인하세요"
     />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <header-seller></header-seller>
