--- a/src/pages/mypage/index.html
+++ b/src/pages/mypage/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="마이페이지 - 주문 내역" />
+    <link rel="icon" href="/favicon.ico" />
     <title>마이페이지 | HODU MARKET</title>
   </head>
   <body>
