--- a/src/pages/page404/index.html
+++ b/src/pages/page404/index.html
@@ -12,6 +12,7 @@
       property="og:description"
       content="페이지가 존재하지 않거나 사용할 수 없는 페이지입니다."
     />
+    <link rel="icon" href="/favicon.ico" />
     <title>404 - 페이지를 찾을 수 없습니다 | HODU MARKET</title>
   </head>
   <body>
