--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="딥러닝 개발자 무릎 담요 - 백엔드글로벌" />
     <meta property="og:title" content="딥러닝 개발자 무릎 담요" />
     <meta property="og:description" content="17,500원 - 택배배송 / 무료배송" />
+    <link rel="icon" href="/favicon.ico" />
     <title>딥러닝 개발자 무릎 담요 | HODU MARKET</title>
   </head>
   <body>
