fixed: 최적화 작업 중 취소

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="slider-wrapper">
           <!-- 첫 번째 슬라이드 -->
           <div class="slide active">
-            <img src="/src/assets/images/weniv1.png" alt="위니브 슬라이드 1" />
+            <img src="/src/assets/images/weniv1.png" alt="위니브 슬라이드 1" width="1920" height="500" />
           </div>
           <!-- 두 번째 슬라이드 -->
           <div class="slide">
-            <img src="/src/assets/images/weniv2.png" alt="위니브 슬라이드 2" />
+            <img src="/src/assets/images/weniv2.png" alt="위니브 슬라이드 2" width="1920" height="500" />
           </div>
           <!-- 세 번째 슬라이드 -->
           <div class="slide">
-            <img src="/src/assets/images/weniv3.png" alt="위니브 슬라이드 3" />
+            <img src="/src/assets/images/weniv3.png" alt="위니브 슬라이드 3" width="1920" height="500" />
           </div>
         </div>
 
