fix: 장바구니 배송비 가격 연동 수정

--- a/src/pages/shoppingCartPage/index.html
+++ b/src/pages/shoppingCartPage/index.html
@@ -69,7 +69,7 @@
             <div class="payment-item">
               <span class="payment-label">배송비</span>
               <div class="payment-value">
-                <span class="payment-amount">0</span>
+                <span class="payment-amount" id="totalShippingPrice">0</span>
                 <span class="payment-unit">원</span>
               </div>
             </div>
